--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,11 @@
 	<modules>
 		<module>shodrone.app1</module>
 		<module>shodrone.app2</module>
+		<module>shodrone.backoffice</module>
+		<module>shodrone.persistence.impl</module>
+		<module>shodrone.core</module>
+		<module>shodrone.infrastructure.application</module>
+		<module>shodrone.bootstrappers</module>
 		<module>shodrone.util.ci</module>
 	</modules>
 	<version>0.1.0</version>
@@ -18,6 +23,14 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>11</maven.compiler.source>
 		<maven.compiler.target>11</maven.compiler.target>
+
+		<eapli.framework.core.version>25.0.0-RELEASE</eapli.framework.core.version>
+		<eapli.framework.authz.version>25.0.0-RELEASE</eapli.framework.authz.version>
+		<eapli.framework.pubsub.version>25.0.0-RELEASE</eapli.framework.pubsub.version>
+
+		<eapli.framework.core.version-snapshot>25.0.1</eapli.framework.core.version-snapshot>
+		<eapli.framework.authz.version-snapshot>22.0.0</eapli.framework.authz.version-snapshot>
+		<eapli.framework.pubsub.version-snapshot>22.1.0</eapli.framework.pubsub.version-snapshot>
 	</properties>
 
 	<dependencies>
@@ -88,7 +101,36 @@
 			<version>6.2.0.Final</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.bitbucket.pag_isep.eapliframework</groupId>
+			<artifactId>eapli.framework.core</artifactId>
+			<version>${eapli.framework.core.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.bitbucket.pag_isep.eapliframework</groupId>
+			<artifactId>eapli.framework.infrastructure.authz</artifactId>
+			<version>${eapli.framework.authz.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.bitbucket.pag_isep.eapliframework</groupId>
+			<artifactId>eapli.framework.infrastructure.pubsub</artifactId>
+			<version>${eapli.framework.pubsub.version}</version>
+		</dependency>
+
 	</dependencies>
+
+	<repositories>
+		<repository>
+			<id>jitpack.io</id>
+			<url>https://jitpack.io</url>
+		</repository>
+		<repository>
+			<id>maven_central</id>
+			<name>Maven Central</name>
+			<url>https://repo.maven.apache.org/maven2/</url>
+		</repository>
+	</repositories>
+
 
 	<build>
 		<plugins>
