update on readme and added readme on docs with team info

--- a/shodrone.backoffice/src/main/resources/application.properties
+++ b/shodrone.backoffice/src/main/resources/application.properties
@@ -7,5 +7,5 @@
 persistence.repositoryFactory=eapli.base.persistence.impl.jpa.JpaRepositoryFactory
 #persistence.repositoryFactory=eapli.base.persistence.impl.inmemory.InMemoryRepositoryFactory
 ui.menu.layout=horizontal
-persistence.persistenceUnit=eapli.base
+persistence.persistenceUnit=SHODRONE
 HighCaloriesDishLimit=300
