update on project structure // backoffice and bootstrap

--- a/shodrone.app.backoffice/pom.xml
+++ b/shodrone.app.backoffice/pom.xml
@@ -31,6 +31,12 @@
             <version>${project.parent.version}</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>lapr4</groupId>
+            <artifactId>shodrone.app.common.console</artifactId>
+            <version>0.1.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
 
