#16 #17 Documentation all done and complete

--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,8 @@
 		<module>shodrone.bootstrappers</module>
 		<module>shodrone.util.ci</module>
 		<module>shodrone.LPROG</module>
-	</modules>
+        <module>shodrone.SCOMP</module>
+    </modules>
 	<version>0.1.0</version>
 
 	<properties>
