--- a/shodrone.app.backoffice/pom.xml
+++ b/shodrone.app.backoffice/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>lapr4</groupId>
         <artifactId>shodrone</artifactId>
-        <relativePath>../</relativePath>
+        <relativePath>../pom.xml</relativePath>
         <version>0.1.0</version>
     </parent>
 
