--- a/shodrone.util.ci/pom.xml
+++ b/shodrone.util.ci/pom.xml
@@ -27,7 +27,7 @@
         <dependency>
             <version>0.1.0</version>
             <groupId>lapr4</groupId>
-            <artifactId>shodrone.app1</artifactId>
+            <artifactId>customer</artifactId>
         </dependency>
         <dependency>
             <version>0.1.0</version>
