--- a/shodrone.app.customer/pom.xml
+++ b/shodrone.app.customer/pom.xml
@@ -23,6 +23,12 @@
     <dependencies>
         <dependency>
             <groupId>lapr4</groupId>
+            <artifactId>shodrone.persistence.impl</artifactId>
+            <version>${project.parent.version}</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>lapr4</groupId>
             <artifactId>shodrone.app.common.console</artifactId>
             <version>0.1.0</version>
             <scope>compile</scope>
