Show Proposal Grammar Simplification

--- a/shodrone.LPROG/pom.xml
+++ b/shodrone.LPROG/pom.xml
@@ -16,5 +16,13 @@
         <maven.compiler.target>23</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>lapr4</groupId>
+            <artifactId>shodrone.core</artifactId>
+            <version>0.1.0</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 </project>
