--- a/shodrone.server/pom.xml
+++ b/shodrone.server/pom.xml
@@ -1,19 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <parent>
         <groupId>lapr4</groupId>
         <artifactId>shodrone</artifactId>
         <version>0.1.0</version>
     </parent>
 
-    <groupId>lapr4</groupId>
-    <artifactId>customer</artifactId>
+    <artifactId>shodrone.server</artifactId>
     <packaging>jar</packaging>
 
-    <name>shodrone.customer</name>
+    <name>shodrone.server</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -33,28 +32,6 @@
             <version>0.1.0</version>
             <scope>compile</scope>
         </dependency>
-        <dependency>
-            <groupId>lapr4</groupId>
-            <artifactId>shodrone.server</artifactId>
-            <version>0.1.0</version>
-            <scope>compile</scope>
-        </dependency>
     </dependencies>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>3.2.0</version>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <mainClass>hello.HelloWorld</mainClass>
-                        </manifest>
-                    </archive>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
