--- a/shodrone.server/pom.xml
+++ b/shodrone.server/pom.xml
@@ -32,6 +32,12 @@
             <version>0.1.0</version>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+        </dependency>
     </dependencies>
 
 </project>
