--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,12 @@
 			<artifactId>eapli.framework.infrastructure.pubsub</artifactId>
 			<version>${eapli.framework.pubsub.version}</version>
 		</dependency>
+			<dependency>
+				<groupId>org.apache.pdfbox</groupId>
+				<artifactId>pdfbox</artifactId>
+				<version>2.0.30</version> <!-- Ou a versão mais recente -->
+			</dependency>
+
 
 	</dependencies>
 
