--- a/shodrone.app.customer/pom.xml
+++ b/shodrone.app.customer/pom.xml
@@ -39,6 +39,12 @@
             <version>0.1.0</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>lapr4</groupId>
+            <artifactId>shodrone.backoffice</artifactId>
+            <version>0.1.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
