--- a/shodrone.testing/pom.xml
+++ b/shodrone.testing/pom.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>lapr4</groupId>
         <artifactId>shodrone</artifactId>
         <version>0.1.0</version>
     </parent>
 
-    <artifactId>shodrone.server</artifactId>
+    <groupId>lapr4</groupId>
+    <artifactId>testing</artifactId>
     <packaging>jar</packaging>
 
-    <name>shodrone.server</name>
+    <name>shodrone.testing</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -32,18 +33,22 @@
             <version>0.1.0</version>
             <scope>compile</scope>
         </dependency>
-
-        <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>2.10.1</version>
-        </dependency>
         <dependency>
             <groupId>lapr4</groupId>
-            <artifactId>shodrone.SCOMP</artifactId>
+            <artifactId>shodrone.server</artifactId>
             <version>0.1.0</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.2.0</version>
+
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
