--- a/shodrone.util.ci/pom.xml
+++ b/shodrone.util.ci/pom.xml
@@ -32,7 +32,7 @@
         <dependency>
             <version>0.1.0</version>
             <groupId>lapr4</groupId>
-            <artifactId>shodrone.app2</artifactId>
+            <artifactId>testing</artifactId>
         </dependency>
     </dependencies>
 
