--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ replay_pid*
 db
 shodrone.app.customer/src/downloads/
 shodrone.app.customer/src/downloads
+shodrone.SCOMP/src/main/resources/config.properties
