Little change in the simulator for SCOMP

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@ db
 shodrone.app.customer/src/downloads/
 shodrone.app.customer/src/downloads
 shodrone.SCOMP/src/main/resources/config.properties
+shodrone.SCOMP/src/main/resources/
